--- a/templates/payment.html
+++ b/templates/payment.html
@@ -849,7 +849,8 @@
                 currency: 'INR',
                 email: email,
                 phone: phone,
-                user_id: userId // Associate booking with user
+                user_id: userId, // Associate booking with user
+                special_requests: guest.specialRequests
             };
 
             try {
