--- a/templates/hotel-booking.html
+++ b/templates/hotel-booking.html
@@ -1040,8 +1040,7 @@
                     const name = this.dataset.name;
                     const country = this.dataset.country;
                     const fullDesc = this.dataset.full;
-                    // Show city, country in the input (e.g., "Mumbai, India")
-                    destinationInput.value = country ? `${name}, ${country}` : name;
+                    destinationInput.value = fullDesc || (country ? `${name}, ${country}` : name);
                     selectedLocationData = {
                         name: name,
                         country: country,
